--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@ body {
 }
 
 .App {
-  border: 1px red solid;
+  /* border: 1px red solid; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -18,16 +18,17 @@ body {
 
 /* HEADER */
 .header {
-  border: 1px red solid;
+  /* border: 1px red solid; */
   width: 100%;
   min-height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f8fbff;
 }
 
 .hero {
-  border: 1px red solid;
+  /* border: 1px red solid; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -36,9 +37,31 @@ body {
 }
 
 .hero__title {
-  border: 1px red solid;
+  margin: 3rem 0 2rem;
+  font-weight: 800;
+  color: #532E1C;
 }
 
 .hero__info {
   font-size: 1.2rem;
+  font-weight: 500;
+  color: #202020;
+}
+
+.hero__img {
+  max-width: 100%;
+}
+
+
+/* MAIN */
+
+
+/* FOOTER */
+.footer {
+  border: red 1px solid;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: auto;
+  width: 100%;
 }
