--- a/src/App.css
+++ b/src/App.css
@@ -58,10 +58,21 @@ body {
 
 /* FOOTER */
 .footer {
-  border: red 1px solid;
+  /* border: red 1px solid; */
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: auto;
   width: 100%;
+  color: #f8fbff;
+  background-color: #202020;
+}
+
+.footer__link {
+  color: #f8fbff;
+}
+
+.footer--link:hover {
+  text-decoration: none;
+  font-weight: bold;
 }
