--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -54,7 +54,43 @@ body {
 
 
 /* MAIN */
+.main {
+  /* border: 1px red solid; */
+  width: 100%;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
+.main__form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form__textarea {
+  width: 80vw;
+  height: 4rem;
+}
+
+.form__button {
+  font-family: 'Karla', sans-serif;
+  font-weight: bold;
+  margin-top: 20px;
+  height: 2rem;
+  width: 200px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #C5A880;
+
+}
+
+.form__button:active {
+  box-shadow: inset 5px 5px 10px -3px #532E1C;
+}
 
 /* FOOTER */
 .footer {
