--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,13 +8,15 @@ body {
 }
 
 .App {
-  /* border: 1px red solid; */
+  border: 1px red solid;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
+  // max-width: 100vh;
   background-color: white;
 }
+
 
 /* HEADER */
 .header {
@@ -55,7 +57,7 @@ body {
 
 /* MAIN */
 .main {
-  /* border: 1px red solid; */
+  // border: 1px red solid;
   width: 100%;
   min-height: 400px;
   display: flex;
@@ -64,10 +66,32 @@ body {
   justify-content: center;
 }
 
+/* FORM */
 .main__form {
+  border: 1px red solid;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+input[type="text"], input[type="email"] {
+  margin-bottom: 15px;
+  height: 30px;
+  text-indent: 10px;
+  border: 1px solid #444;
+  border-radius: 5px;
+  display: block;
+}
+
+input[type="checkbox"] {
+  margin-right: 0.75rem;
+}
+
+textarea {
+  margin-bottom: 15px;
+  border: 1px solid #444;
+  border-radius: 5px;
+  display: block;
 }
 
 .form__textarea {
@@ -91,6 +115,7 @@ body {
 .form__button:active {
   box-shadow: inset 5px 5px 10px -3px #532E1C;
 }
+
 
 /* FOOTER */
 .footer {
