--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,7 +4,7 @@
 
 body {
   margin: 0;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
 }
 
 .App {
@@ -16,7 +16,6 @@ body {
   // max-width: 100vh;
   background-color: white;
 }
-
 
 /* HEADER */
 .header {
@@ -41,7 +40,7 @@ body {
 .hero__title {
   margin: 3rem 0 2rem;
   font-weight: 800;
-  color: #532E1C;
+  color: #532e1c;
 }
 
 .hero__info {
@@ -53,7 +52,6 @@ body {
 .hero__img {
   max-width: 100%;
 }
-
 
 /* MAIN */
 .main {
@@ -67,18 +65,26 @@ body {
 }
 
 /* FORM */
+form > * {
+  font-family: "Karla", sans-serif;
+}
+
 .main__form {
   border: 1px red solid;
+  width: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-input[type="text"], input[type="email"] {
+input[type="text"],
+input[type="email"] {
   margin-bottom: 15px;
-  height: 30px;
+  width: 100%;
+  height: 2rem;
+  font-size: 0.8rem;
   text-indent: 10px;
-  border: 1px solid #444;
+  border: 1px solid #532e1c8e;
   border-radius: 5px;
   display: block;
 }
@@ -88,34 +94,49 @@ input[type="checkbox"] {
 }
 
 textarea {
+  width: 100%;
+  height: 6rem;
   margin-bottom: 15px;
-  border: 1px solid #444;
+  font-family: "Karla", sans-serif;
+  font-size: 0.9rem;
+  text-indent: 10px;
+  border: 1px solid #532e1c8e;
   border-radius: 5px;
   display: block;
 }
 
-.form__textarea {
-  width: 80vw;
-  height: 4rem;
+.form_length {
+  // border: 1px red solid;
+  display: flex;
+  margin-bottom: 15px;
+  align-items: center;
+  width: 100%;
+  height: 2rem;
+
+  label {
+    margin-right: 10px;
+  }
+
+  select {
+    margin-right: 5px;
+  }
 }
 
 .form__button {
-  font-family: 'Karla', sans-serif;
   font-weight: bold;
+  font-size: 0.9rem;
   margin-top: 20px;
-  height: 2rem;
+  height: 3rem;
   width: 200px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
-  background-color: #C5A880;
-
+  background-color: #c5a880;
 }
 
 .form__button:active {
-  box-shadow: inset 5px 5px 10px -3px #532E1C;
+  box-shadow: inset 5px 5px 10px -3px #532e1c;
 }
-
 
 /* FOOTER */
 .footer {
