--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -8,7 +8,7 @@ body {
 }
 
 .App {
-  border: 1px red solid;
+  // border: 1px red solid;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,7 +50,7 @@ body {
 }
 
 .hero__img {
-  max-width: 100%;
+  max-width: 80%;
 }
 
 /* MAIN */
@@ -163,6 +163,7 @@ textarea {
   display: flex;
   flex-direction: column;
   align-items: center;
+  white-space: pre-line;
 }
 
 
