refactor code & add comments

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,3 +1,5 @@
+// TODO: add sass variables for primary, secondary, and tertiary colours
+
 * {
   box-sizing: border-box;
 }
@@ -76,7 +78,7 @@ form {
   * {
     font-family: "Karla", sans-serif;
   }
-} 
+}
 
 .main__form {
   // border: 1px red solid;
@@ -165,7 +167,6 @@ textarea {
   align-items: center;
   white-space: pre-line;
 }
-
 
 /* FOOTER */
 .footer {
