--- a/src/styles/queries.scss
+++ b/src/styles/queries.scss
@@ -6,18 +6,37 @@ $large: 1200px;
   /* HEADER */
   .hero {
     // border: 1px red solid;
-    width: 1400px;
+    max-width: 1200px;
+    flex-direction: row-reverse;
+    padding: 8rem 2rem;
+  }
+
+  .hero__text-group {
+    // border: 1px red solid;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 60%;
   }
 
   .hero__img {
+    // border: 1px red solid;
     width: 40%;
   }
 
   .hero__info {
-    max-width: 60%;
+    max-width: 80%;
   }
 
   /* MAIN */
+  .main {
+    padding-top: 4rem;
+  }
+
+  form {
+    padding-bottom: 4rem;
+  }
+
   .form__textarea {
     width: 400px;
   }
@@ -25,6 +44,6 @@ $large: 1200px;
 
 
 /* Larger Screens */
-@media screen and (min-width: $large) {
+// @media screen and (min-width: $large) {
   
-}
+// }
