--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -75,8 +75,6 @@ body {
 /* FORM */
 form {
   padding-bottom: 2.5rem;
-  // text-align: left;
-
 
   * {
     font-family: "Karla", sans-serif;
@@ -125,20 +123,22 @@ textarea {
   display: block;
 }
 
+.form__subject-container {
+  width: 100%;
+}
+
 .form_length {
   // border: 1px red solid;
   display: flex;
-  margin-bottom: 15px;
+  justify-content: center;
   align-items: center;
-  width: 100%;
+  margin-bottom: 15px;
   height: 2rem;
 
-  label {
-    margin-right: 10px;
-  }
-
   select {
-    margin-right: 5px;
+    margin-right: 3px;
+    height: 1.8rem;
+    border-radius: 5px;
   }
 }
 
