--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,3 @@
-// TODO: add sass variables for primary, secondary, and tertiary colours
-// TODO: separate main and results styles into different files.
 $primary: #c5a880;
 $secondary: #532e1c;
 $light: #f8fbff;
@@ -15,18 +13,15 @@ body {
 }
 
 .App {
-  // border: 1px red solid;
   display: flex;
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  // max-width: 100vh;
   background-color: white;
 }
 
 /* HEADER */
 .header {
-  /* border: 1px red solid; */
   width: 100%;
   min-height: 300px;
   display: flex;
@@ -36,7 +31,6 @@ body {
 }
 
 .hero {
-  /* border: 1px red solid; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,7 +56,6 @@ body {
 
 /* MAIN */
 .main {
-  // border: 1px red solid;
   width: 100%;
   min-height: 400px;
   display: flex;
@@ -72,27 +65,24 @@ body {
   padding-top: 2.5rem;
 }
 
+.main-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 /* FORM */
-form {
+.main__form {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-bottom: 2.5rem;
 
   * {
     font-family: "Karla", sans-serif;
   }
-}
-
-.form__instruction-text {
-  font-weight: bold;
-  margin-right: auto;
-
-}
-
-.main__form {
-  // border: 1px red solid;
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
 }
 
 input[type="text"],
@@ -123,12 +113,16 @@ textarea {
   display: block;
 }
 
+.form__instruction-text {
+  font-weight: bold;
+  margin-right: auto;
+}
+
 .form__subject-container {
   width: 100%;
 }
 
 .form_length {
-  // border: 1px red solid;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -171,7 +165,6 @@ textarea {
 }
 
 .results__render {
-  // border: 1px red solid;
   width: 90vw;
   border-radius: 9px;
   padding: 0 1rem 2rem;
@@ -180,12 +173,11 @@ textarea {
   align-items: center;
   white-space: pre-line;
   background-color: white;
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
 /* FOOTER */
 .footer {
-  /* border: red 1px solid; */
   display: flex;
   justify-content: center;
   align-items: center;
