--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -41,6 +41,7 @@ body {
 .hero__title {
   margin: 3rem 0 2rem;
   font-weight: 800;
+  font-size: 2.5rem;
   color: $secondary;
 }
 
@@ -57,12 +58,16 @@ body {
 /* MAIN */
 .main {
   width: 100%;
-  min-height: 400px;
+  min-height: 800px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   padding-top: 2.5rem;
+
+  h2 {
+    font-size: 2rem;
+  }
 }
 
 .main-container {
@@ -85,36 +90,9 @@ body {
   }
 }
 
-input[type="text"],
-input[type="email"] {
-  margin-bottom: 15px;
-  width: 100%;
-  height: 2rem;
-  font-size: 0.8rem;
-  text-indent: 10px;
-  border: 1px solid #532e1c8e;
-  border-radius: 5px;
-  display: block;
-}
-
-input[type="checkbox"] {
-  margin-right: 0.75rem;
-}
-
-textarea {
-  width: 100%;
-  height: 6rem;
-  margin-bottom: 15px;
-  font-family: "Karla", sans-serif;
-  font-size: 0.9rem;
-  padding-left: 1rem;
-  border: 1px solid #532e1c8e;
-  border-radius: 5px;
-  display: block;
-}
-
 .form__instruction-text {
-  font-weight: bold;
+  font-weight: 600;
+  font-size: 1.2rem;
   margin-right: auto;
 }
 
@@ -132,13 +110,40 @@ input[name="subject"] {
   justify-content: center;
   align-items: center;
   margin-bottom: 15px;
-  height: 2rem;
+  height: 3rem;
 
   select {
-    margin-left: 5px;
-    height: 1.8rem;
-    border-radius: 5px;
+    margin-left: 0.5rem;
+    height: 3rem;
+    border-radius: 9px;
   }
+}
+
+input[type="text"] {
+  margin-bottom: 15px;
+  width: 100%;
+  height: 3rem;
+  font-size: 0.8rem;
+  text-indent: 10px;
+  border: 1px solid #532e1c8e;
+  border-radius: 9px;
+  display: block;
+}
+
+textarea {
+  width: 100%;
+  height: 8rem;
+  margin-bottom: 15px;
+  font-family: "Karla", sans-serif;
+  font-size: 0.9rem;
+  padding: 1rem;
+  border: 1px solid #532e1c8e;
+  border-radius: 9px;
+  display: block;
+}
+
+textarea:focus, input:focus {
+  outline: none;
 }
 
 .form__button {
@@ -146,9 +151,9 @@ input[name="subject"] {
   font-size: 0.9rem;
   margin-top: 20px;
   height: 3rem;
-  width: 200px;
+  width: 250px;
   border: none;
-  border-radius: 5px;
+  border-radius: 9px;
   cursor: pointer;
   color: black;
   background-color: $primary;
