--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -20,7 +20,7 @@ body {
   background-color: white;
 }
 
-/* HEADER */
+/* === HEADER === */
 .header {
   width: 100%;
   min-height: 300px;
@@ -55,7 +55,7 @@ body {
   max-width: 80%;
 }
 
-/* MAIN */
+/* === MAIN === */
 .main {
   width: 100%;
   min-height: 800px;
@@ -77,7 +77,7 @@ body {
   align-items: center;
 }
 
-/* FORM */
+/* === FORM === */
 .main__form {
   width: 80%;
   display: flex;
@@ -163,7 +163,7 @@ textarea:focus, input:focus {
   box-shadow: inset 5px 5px 10px -3px $secondary;
 }
 
-/* RESULTS */
+/* === RESULTS === */
 .results {
   width: 100vw;
   min-height: 300px;
@@ -186,7 +186,19 @@ textarea:focus, input:focus {
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
-/* FOOTER */
+/* === RESULTS ANIMATIONS === */
+/* appear is when the component mounts */
+.animate-results-appear {
+  opacity: 0;
+  transform: scale(0.2);
+}
+.animate-results-appear-active {
+  opacity: 1;
+  transform: translateX(0);
+  transition: opacity 1000ms, transform 1000ms;
+}
+
+/* === FOOTER === */
 .footer {
   display: flex;
   justify-content: center;
