--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  background-color: white;
+  background-color: base.$tertiary;
 }
 
 /* === MAIN === */
@@ -17,6 +17,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 2.5rem;
+  background-color: base.$tertiary;
 
   h2 {
     font-size: 2rem;
@@ -108,7 +109,7 @@ textarea:focus, input:focus {
   border: none;
   border-radius: 9px;
   cursor: pointer;
-  color: black;
+  color: base.$light;
   background-color: base.$primary;
 }
 
