--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,7 +1,13 @@
-$primary: #c5a880;
-$secondary: #532e1c;
+// $primary: #c5a880;
+// $secondary: #532e1c;
+// $light: #f8fbff;
+// $dark: #282a37;
+
+$primary: #1D5C63;
+$secondary: #417D7A;
+$tertiary: #EDE6DB;
 $light: #f8fbff;
-$dark: #282a37;
+$dark: #153033;
 
 * {
   box-sizing: border-box;
