--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -125,7 +125,7 @@ textarea:focus, input:focus {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f8fbff;
+  background-color: base.$tertiary;
 }
 
 .results__render {
@@ -136,7 +136,7 @@ textarea:focus, input:focus {
   flex-direction: column;
   align-items: center;
   white-space: pre-line;
-  background-color: white;
+  background-color: base.$light;
   box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
 }
 
