--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 5rem;
+  margin-top: auto;
   width: 100%;
   color: base.$light;
   background-color: rgb(18, 21, 18);
